Deleted the name attached to the first div

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="main1">
+    <div>
         <div class="main1">
             <h2>HTML FORMS ELEMENTS</h2>
             <hr>
