Added the password field beneath the last name field

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
                 last name:
                 <input type="text" name="lastname"><br>
 
+                password
+                <input type="password"  value="">
+                <br>
                 <input type="radio" name="gender" value="male" checked>
                 Male<br>
                 <input type="radio" name="gender" value="female">
