Added some select tags above the submit button

--- a/index.html
+++ b/index.html
@@ -28,6 +28,14 @@
                 female<br>
                 <input type="radio" name="gender" value="other">
                 Other<br>
+
+                <!--creating select tag-->
+                <select name="cars">
+                    <option value="Volvo">Volvo</option>
+                    <option value="Saab">Saab</option>
+                    <option value="fiat">fiat</option>
+                    <option value="audi">audi</option>
+                </select>
                 <input type="submit" value="submit">
             </form>
         </div>
