--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <option value="Saab">Saab</option>
                     <option value="fiat">fiat</option>
                     <option value="audi">audi</option>
-                </select>
+                </select><br><br>
                 <input type="submit" value="submit">
             </form>
         </div>
