--- a/index.html
+++ b/index.html
@@ -33,9 +33,13 @@
                 <select name="cars">
                     <option value="Volvo">Volvo</option>
                     <option value="Saab">Saab</option>
-                    <option value="fiat">fiat</option>
-                    <option value="audi">audi</option>
+                    <option value="fiat" >fiat</option>
+                    <option value="audi"selected>audi</option>
                 </select><br><br>
+
+                <textarea name="" id="" cols="30" rows="10">
+                    I love programming
+                </textarea><br>
                 <input type="submit" value="submit">
             </form>
         </div>
