--- a/index.html
+++ b/index.html
@@ -37,9 +37,7 @@
                     <option value="audi"selected>audi</option>
                 </select><br><br>
 
-                <textarea name="" id="" cols="30" rows="10">
-                    I love programming
-                </textarea><br>
+                <textarea name="" id="" cols="30" rows="10">I love programming</textarea><br>
                 <input type="submit" value="submit">
             </form>
         </div>
