Add datalist tag

--- a/index.html
+++ b/index.html
@@ -38,7 +38,15 @@
                 </select><br><br>
 
                 <textarea name="" id="" cols="30" rows="10">I love programming</textarea><br>
-                <input type="submit" value="submit">
+                <input type="submit" value="submit"><br>
+                <input list="browser">
+                <datalist id="browser">
+                    <option value="Internet Explorer"></option>
+                    <option value="FireFox"></option>
+                    <option value="Chrome"></option>
+                    <option value="Opera"></option>
+                    <option value="Safari"></option>
+                </datalist>
             </form>
         </div>
     </div>
