--- a/index.html
+++ b/index.html
@@ -48,6 +48,12 @@
                     <option value="Safari"></option>
                 </datalist>
             </form>
+
+            <form oninput="result.value=parseInt(firstValue.value)+parseInt(secondValue.value)">
+                <input type="number" name="firstValue"> +
+                <input type="number" name="secondValue"> =
+                <output name="result"></output>
+            </form>
         </div>
     </div>
 </body>
