--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                 password
                 <input type="password"  value="">
                 <br>
+                <input type="color" name="" value=""> <br>
                 <input type="radio" name="gender" value="male" checked>
                 Male<br>
                 <input type="radio" name="gender" value="female">
