--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                 <input type="password"  value="">
                 <br>
                 <input type="color" name="" value=""> <br>
+                <input type="date" name="" value=""> <br>
                 <input type="radio" name="gender" value="male" checked>
                 Male<br>
                 <input type="radio" name="gender" value="female">
