Add required attribute to the Firstname field

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
             <form>
                 first name:
-                <input type ="text" name="firstname"><br>
+                <input type ="text" name="firstname" required><br>
                 last name:
                 <input type="text" name="lastname"><br>
 
@@ -24,6 +24,7 @@
                 <br>
                 <input type="color" name="" value=""> <br>
                 <input type="date" name="" value=""> <br>
+                <input type="email"> <br>
                 <input type="radio" name="gender" value="male" checked>
                 Male<br>
                 <input type="radio" name="gender" value="female">
