--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                 <input type="radio" name="gender" value="other">
                 Other<br>
 
+                <input type="text" name="address" id="address" id="" autofocus autocomplete="country-name"> <br>
                 <!--creating select tag-->
                 <select name="cars">
                     <option value="Volvo">Volvo</option>
